cmake_minimum_required(VERSION 3.8)
project(assignment1_rt)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(turtlesim REQUIRED)
find_package(geometry_msgs REQUIRED)

add_executable(ui_node src/ui_node.cpp)
ament_target_dependencies(ui_node rclcpp std_msgs geometry_msgs)

install(TARGETS
  ui_node 
  DESTINATION lib/${PROJECT_NAME}
)
ament_package()
